# C-code

./: 3-1-year.c  3-2-ThereNumsAdd.c  4-1-PalindromeNumber.c  4-1-Symmetric-number.c  4-2-factorial.c  4-3-Change_paper_money.c  5-1-Count_the_number_of_No2.c  5-2-strcmp.c  6-1-subfunction.c  6-2-buffer.c  7-1-step.c  CMakeLists.txt  PalindromeNumber.c  ThereNumsAdd.c  add1-100.c  break.c  main.c  snake.c  test.c  year.c
